classDiagram
    direction TB
    class Repository {
        +entities_type : string
        #use_logs : bool
        #logs_repository : Logs
        -map : array
        +disable_logs()
        +enable_logs()
        +get_enabled_logs()
        #__construct()
        +init_objects()
        +get_map()
        +get_name()
        +insert(obj)
        +insert_metadata(obj, prop, diffs)
        +maybe_add_slashes(value)
        +fetch_output(WP_Query, output)
        +parse_fetch_args(args)
        +get_default_properties(map)
        +get_mapped_property(entity, prop)
        +$get_collections_db_identifiers()
        +$get_entity_by_post(post)
        +$get_entity_by_post_type(post_type, post)
        +$get_repository(entity)
        +fetch_one(args)
        +trash(entity)
        +delete(entity, permanent)
        -delete_attachments(entity)
        +can_edit(entity, user)
        +can_read(entity, user)
        +can_delete(entity, user)
        +can_publish(entity, user)
        +unique_multidimensional_array(array, key)
        -insert_thumbnail(obj, diffs)
        +get_descendants_ids(id, depth)
        +get_capabilities()
        #sanitize_value(content)
    }
    class Collections {
        +entities_type : string
        -old_collection : Collection
        -old_core_title : string
        -old_core_description : string
        #init()
        +get_max_items_per_page()
        #_get_map()
        +get_cpt_labels()
        +register_post_type()
        +insert(collection)
        +update(object, new_values)
        +fetch(args, output)
        +fetch_by_db_identifier(db_identifier)
        +get_id_by_db_identifier(db_identifier)
        +pre_process(collection)
        +handle_core_metadata(collection)
        +handle_control_metadata(collection)
        +handle_parent_order_clone(collection)
    }
    Repository ..> Collections
    Repository ..> Repository
    Repository <|-- Collections
